unpackaged/main/default/objects/Yodlee_User_Account__c/Yodlee_User_Account__c.object-meta.xml
<CustomObject>
    <label>Yodlee User Account</label>
    <nameField>
        <label>Yodlee User Accounts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Yodlee User Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>