unpackaged/main/default/objects/Yodlee_User_Account__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>