unpackaged/main/default/objects/Yodlee_User_Account__c/fields/Available_Balance__c.field-meta.xml
<CustomField>
    <fullName>Available_Balance__c</fullName>
    <label>Available Balance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>