unpackaged/main/default/objects/Yodlee_User_Account__c/fields/verified__c.field-meta.xml
<CustomField>
    <fullName>verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>verified</label>
    <type>Checkbox</type>
</CustomField>