unpackaged/main/default/objects/Yodlee_User_Account__c/fields/Yodlee_Account__c.field-meta.xml
<CustomField>
    <fullName>Yodlee_Account__c</fullName>
    <label>Yodlee Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Yodlee User Accounts</relationshipLabel>
    <relationshipName>Yodlee_User_Accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>