unpackaged/main/default/objects/Yodlee_User_Account__c/fields/Yodlee_Application__c.field-meta.xml
<CustomField>
    <fullName>Yodlee_Application__c</fullName>
    <label>Application</label>
    <referenceTo>genesis__Applications__c</referenceTo>
    <relationshipLabel>Yodlee User Accounts</relationshipLabel>
    <relationshipName>Yodlee_User_Accounts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>